--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,20 @@
 name: taida
 description: A sample command-line application.
-# version: 1.0.0
+version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
   sdk: '>=2.8.1 <3.0.0'
 
-depenencies:
-  yaml: ^2.2
+dependencies:
+  args: ^1.6.0
+  ansicolor: ^1.1.1
+  meta: ^1.2.4
+  yaml: ^2.2.1
 
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.4
+
+executables:
+  taida:
