--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: taida
 description: A sample command-line application.
-version: 1.0.0
+version: 0.4.0
 # homepage: https://www.example.com
 
 environment:
@@ -10,6 +10,7 @@ dependencies:
   args: ^1.6.0
   ansicolor: ^1.1.1
   crypto: ^2.1.5
+  html: ^0.14.0
   meta: ^1.2.4
   sass: ^1.32.0
   watcher: ^0.9.7
