--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "sharp": "0.27.1",
         "stylelint": "13.8.0",
         "stylelint-scss": "3.18.0",
         "stylelint-config-standard": "20.0.0"
