--- a/taida.yaml
+++ b/taida.yaml
@@ -20,3 +20,24 @@ taida:
       templates_directory: templates
       pages_directory: pages
       partials_directory: _partials
+    meta:
+      tilecolor: black
+      short_name: taida
+      start_url: '.',
+      display: x
+      favicon_image: assets/res/favicon.svg # will be compiled
+      preview_image: assets/res/preview.jpeg # will be compiled
+      keywords:
+        - a
+        - b
+        - c
+      twitter:
+        type: summary
+        creator: '@glassp'
+        site: '@github'
+      open_graph:
+        type: website
+        site: Github.com
+      related_applications:
+        - platform: play
+          url: https://play.google.com/app/gdt8trg78w2
