--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "dependencies": {
+        "prettier": "2.2.1",
         "sharp": "0.27.1",
         "stylelint": "13.8.0",
-        "stylelint-scss": "3.18.0",
-        "stylelint-config-standard": "20.0.0"
+        "stylelint-config-standard": "20.0.0",
+        "stylelint-config-prettier": "8.0.2",
+        "stylelint-scss": "3.18.0"
     }
 }
