--- a/taida.yaml
+++ b/taida.yaml
@@ -2,17 +2,20 @@ taida:
   output_dir: public #default to build
   #log_file: log/output.log # default '' => no file logging
   # must not contain a leading / and must be relative to this file
-  progress: true #default false [log@v0.3]
   enable_cache_buster: true #default false
+  log_file: null #log/taida.log # null => disabled
   module_config:
     copy:
       - from: 
           - copy
-          - res
+          - res/files
         to: assets/res
     scss:
       - entry: assets/scss/app.scss #relative path to file from this file
         output: assets/app.css #relative path to file from this file
+      - entry: assets/scss/media.scss
+        output: assets/media.css
+        media: "(preferes-color-scheme: dark)" # must be a valid media query and should always be quoted
     dart:
       - entry: assets/dart/app.dart
         output: assets/app.dart.js
@@ -23,10 +26,10 @@ taida:
     meta:
       tilecolor: black
       short_name: taida
-      start_url: '.',
-      display: x
-      favicon_image: assets/res/favicon.svg # will be compiled
-      preview_image: assets/res/preview.jpeg # will be compiled
+      start_url: '.'
+      display: standalone
+      favicon_image: res/favicon.svg # will be compiled
+      preview_image: res/preview.jpg # will be compiled
       keywords:
         - a
         - b
