--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: taida
 description: A sample command-line application.
-version: 0.8.0
+version: 0.9.0
 # homepage: https://www.example.com
 
 environment:
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   args: ^1.6.0
+  archive: ^2.0.13
   ansicolor: ^1.1.1
   crypto: ^2.1.5
   html: ^0.14.0
