--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: taida
 description: A sample command-line application.
 version: 1.0.0
-
+repository: 'https://github.com/glassp/taida'
 environment:
   sdk: '>=2.8.1 <3.0.0'
 
