--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: taida
 description: A sample command-line application.
-version: 1.0.6
+version: 1.0.7
 repository: 'https://github.com/glassp/taida'
 environment:
   sdk: '>=2.8.1 <3.0.0'
@@ -17,6 +17,7 @@ dependencies:
   yaml: ^2.2.1
 
 dev_dependencies:
+  effective_dart: ^1.3.0
   pedantic: ^1.9.0
   test: ^1.14.4
 
