--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: taida
-description: A sample command-line application.
-version: 1.0.7
+description: A web application build tool
+version: 1.0.8
 repository: 'https://github.com/glassp/taida'
 environment:
   sdk: '>=2.8.1 <3.0.0'
